--- a/Resources/views/default/edit.html.twig
+++ b/Resources/views/default/edit.html.twig
@@ -1,6 +1,4 @@
-{% extends "::base.html.twig" %}
-
-{% form_theme form _self %}
+{% extends "NovosgaUsersBundle::base.html.twig" %}
 
 {% block body %}
     <h1>
@@ -38,7 +36,7 @@
                     {% if entity.id %}
                         <div class="row">
                             <div class="col-xs-6">
-                                {{ form_row(form.status) }}
+                                {{ form_row(form.ativo) }}
                             </div>
                             <div class="col-xs-6 text-right">
                                 <button type="button" class="btn btn-default" data-toggle="modal" data-target="#dialog-senha">
@@ -56,14 +54,61 @@
                     {% endif %}
                 </fieldset>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7" id="lotacoes">
                 <fieldset>
                     <legend>{% trans %}Lotações{% endtrans %}</legend>
 
                     <p class="info">{% trans %}Lotação é utilizada para definir o perfil de acesso do usuário nas unidades.{% endtrans %}</p>
+                    
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>{% trans %}Unidade{% endtrans %}</th>
+                                <th>{% trans %}Perfil{% endtrans %}</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="lotacao in lotacoes">
+                                <td>
+                                    {% verbatim %}
+                                        {{ lotacao.unidade.nome }}
+                                    {% endverbatim %}
+                                    <input type="hidden" name="novasUnidades[]" v-bind:value="lotacao.unidade.id" v-if="lotacao.novo">
+                                </td>
+                                <td>
+                                    {% verbatim %}
+                                        {{ lotacao.perfil.nome }}
+                                    {% endverbatim %}
+                                    <input type="hidden" name="novosPerfis[]" v-bind:value="lotacao.perfil.id" v-if="lotacao.novo">
+                                </td>
+                                <td class="text-right text-nowrap">
+                                    <button type="button" title="{% trans %}Visualizar permissões{% endtrans %}" class="btn btn-default" v-on:click="viewPerfil(lotacao.perfil.id)">
+                                        <i class="fa fa-eye"></i>
+                                    </button>
 
-                    {{ form_row(form.lotacoes, { label: false }) }}
-
+                                    <button type="button" title="{% trans %}Remover{% endtrans %}" class="btn btn-danger" v-on:click="remove(lotacao)">
+                                        <i class="fa fa-remove"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="2">
+                                </td>
+                                <td class="text-right">
+                                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#dialog-lotacao">
+                                        <span class="glyphicon glyphicon-plus"></span>&nbsp;
+                                        {% trans %}Adicionar{% endtrans %}
+                                    </button>
+                                </td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                    
+                    {{ form_row(form.lotacoesRemovidas, { attr: { 'v-model': 'unidadesRemovidas' } }) }}
+                    
                 </fieldset>
             </div>
         </div>
@@ -82,6 +127,31 @@
     {{ form_end(form) }}
 
     
+    {# lotação #}
+    <div id="dialog-lotacao" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form id="lotacao-form">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">{% trans %}Lotação{% endtrans %}</h4>
+                    </div>
+                    <div class="modal-body">
+                        <!-- dynamic content loaded by ajax -->
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            {% trans %}Fechar{% endtrans %}
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                            {% trans %}Adicionar{% endtrans %}
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+                            
     {# permissoes #}
     <div id="dialog-perfil" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
@@ -167,71 +237,22 @@
 {% block javascripts %}
     {{ parent() }}
     <script>
-        var unidades = [ {% for unidade in unidades %}{{ unidade.id }},{% endfor %} ];
+        var unidades = [ {% for unidade in unidades %}{{ unidade.id }},{% endfor %} ],
+            lotacoes = [ 
+                {%- for lotacao in entity.lotacoes -%}
+                    {
+                        unidade: {
+                            id: {{ lotacao.unidade.id }},
+                            nome: "{{ lotacao.unidade.nome }}"
+                        },
+                        perfil: {
+                            id: {{ lotacao.perfil.id }},
+                            nome: "{{ lotacao.perfil.nome }}"
+                        }
+                    },
+                {%- endfor -%} 
+            ];
     </script>
     <script src="{{ asset('bundles/mangatibase/js/symfony-collection.js') }}"></script>
     <script src="{{ asset('bundles/novosgausers/js/script.js') }}"></script>
-{% endblock %}
-
-{% block _usuario_lotacoes_widget %}
-    <table id="lotacoes" class="table table-striped table-hover"
-            data-prototype="{{ form_widget(form.vars.prototype)|e('html_attr') }}" 
-            data-target="tbody"
-            data-btn-add="#btn-add-lotacao"
-            data-btn-remove=".btn-remove">
-        <thead>
-            <tr>
-                <th>{% trans %}Unidade{% endtrans %}</th>
-                <th>{% trans %}Perfil{% endtrans %}</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for child in form %}
-                {{ form_widget(child) }}
-            {% endfor %}
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="2">
-                </td>
-                <td class="text-right">
-                    <button type="button" id="btn-add-lotacao" class="btn btn-default">
-                        <span class="glyphicon glyphicon-plus"></span>&nbsp;
-                        {% trans %}Adicionar{% endtrans %}
-                    </button>
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-{% endblock %}
-
-{% block _usuario_lotacoes_entry_widget %}
-    <tr>
-        <td>
-            {% if not form.unidade.vars.errors|length and form.vars.data %}
-                {{ form.vars.data.unidade }}
-                <input type="hidden" name="{{ form.unidade.vars.full_name }}" value="{{ form.unidade.vars.data.id }}" class="unidade">
-            {% else %}
-                {{ form_row(form.unidade, { label: false, attr: { class: 'unidade' } }) }}
-            {% endif %}
-        </td>
-        <td>
-            {% if not form.perfil.vars.errors|length and form.vars.data %}
-                {{ form.vars.data.perfil }}
-                <input type="hidden" name="{{ form.perfil.vars.full_name }}" value="{{ form.perfil.vars.data.id }}" class="perfil">
-            {% else %}
-                {{ form_row(form.perfil, { label: false, attr: { class: 'perfil' } }) }}
-            {% endif %}
-        </td>
-        <td class="text-right text-nowrap">
-            <button type="button" title="{% trans %}Visualizar permissões{% endtrans %}" class="btn btn-default btn-view-perfil">
-                <i class="fa fa-eye"></i>
-            </button>
-                
-            <button type="button" title="{% trans %}Remover{% endtrans %}" class="btn btn-danger btn-remove">
-                <i class="fa fa-remove"></i>
-            </button>
-        </td>
-    </tr>
 {% endblock %}
