--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -2,4 +2,9 @@
 
 {% block title -%}
     {% trans %}Usuários{% endtrans %}
-{%- endblock %} 
+{%- endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/novosgausers/css/style.css') }}">
+{% endblock %}
