--- a/Resources/views/default/index.html.twig
+++ b/Resources/views/default/index.html.twig
@@ -22,7 +22,7 @@
     <hr>
     
     <table class="table table-bordered">
-        <thead>
+        <thead class="thead-light">
             <th>#</th>
             <th>{% trans %}Nome de usuário{% endtrans %}</th>
             <th>{% trans %}Nome{% endtrans %}</th>
