--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,8 +1,10 @@
 {% extends "base.html.twig" %}
 
+{% trans_default_domain 'NovosgaUsersBundle' %}
+
 {% block title -%}
-    {% trans %}Usuários{% endtrans %}
-{%- endblock %}
+    {{ 'title'|trans }}
+{%- endblock %} 
 
 {% block stylesheets %}
     {{ parent() }}
